--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
 astroid==2.1.0
 autopep8==1.4.3
 colorama==0.4.1
+dj-database-url==0.5.0
 Django==2.1.7
 django-filter==2.1.0
+django-heroku==0.3.1
 isort==4.3.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
+psycopg2==2.7.7
 pycodestyle==2.5.0
 pylint==2.2.2
 pytz==2018.9
 six==1.12.0
+whitenoise==4.1.2
 wrapt==1.11.1
