--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dj-database-url==0.5.0
 Django==2.1.7
 django-filter==2.1.0
 django-heroku==0.3.1
+gunicorn==19.9.0
 isort==4.3.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
